@@ -94,6 +94,7 @@ following-text-fuel-category=[Treibstoffkategorie: __1__]
 [ingteb-recipe-category-domain-name]
 boiling=Domäne Erhitzung
 burning=Domäne Verbrennung
+fluid-burning=Domäne Verbrennung von Flüssigkeiten
 crafting=Domäne Herstellung
 fluid-mining=Domäne Flüssigkeitsunterstützter Erzabbau
 hand-mining=Anwendungen der Axt
