@@ -104,6 +104,7 @@ following-text-fuel-category=[Fuel category: __1__]
 [ingteb-recipe-category-domain-name]
 boiling=domain for boiling
 burning=domain for burning
+fluid-burning=domain for burning of fluids
 crafting=domain for crafting
 fluid-mining=domain for mining supported by fluid
 hand-mining=domain for hand mining
