@@ -5,6 +5,7 @@ Date: 2022-03-27
     - show mini-recipe panel for improper recipes also
     - show fuel category related information
     - speed information on worker sprites improved
+    - show fluid fuel categories and their burners
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.30
 Date: 2022-03-26
